--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.social a {
+  font-size: 2rem;
+  padding: 1rem;
+}
+.fa-facebook:hover,
+.fa-twitter:hover,
+.fa-goole-plus-g:hover,
+.fa-instagram:hover,
+.fa-youtube:hover {
+  color: #d5d5d5;
+}
+.fa-facebook {
+  color: #b3bed3;
+}
+.fa-twitter {
+  color: #00aced;
+}
+.fa-goole-plus-g {
+  color: #dd4b39;
+}
+.fa-instagram {
+  color: #517fa4;
+}
+.fa-youtube {
+  color: #bb0000;
+}
+footer {
+  background-color: var(--mainBlue); /*#405580;*/
+  color: #d5d5d5;
+  padding-top: 2rem;
+}
+hr.light {
+  border-top: 2px solid #d5d5d5;
+  width: 75%;
+  margin-top: .8rem;
+  margin-bottom: 1rem;
+}
+footer a {
+  color: #d5d5d5; /*d5d5d5 */
+  font-weight: 500;
+}
+footer a:hover {
+  text-decoration: none;
+  color: #e0c9c9;
+}
